Add module for app's settings, allow to set up settings via env vars or cmd args, add typing, minor codestyle fixes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,9 @@ authors = ["aevtikheev <eft000@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8.5"
-aiohttp = "3.6.*"
+aiohttp = "3.6.3"
 aiofiles ="0.4.0"
+environs = "9.3.0"
 
 [tool.poetry.dev-dependencies]
 
